; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_dlil.c_ifnet_input.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_dlil.c_ifnet_input.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }
%struct.mbuf = type { i32 }
%struct.ifnet_stat_increment_param = type { i32 }

@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ifnet_input(%struct.ifnet* %0, %struct.mbuf* %1, %struct.ifnet_stat_increment_param* %2) #0 {
  %4 = alloca %struct.ifnet*, align 8
  %5 = alloca %struct.mbuf*, align 8
  %6 = alloca %struct.ifnet_stat_increment_param*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %4, align 8
  store %struct.mbuf* %1, %struct.mbuf** %5, align 8
  store %struct.ifnet_stat_increment_param* %2, %struct.ifnet_stat_increment_param** %6, align 8
  %7 = load %struct.ifnet*, %struct.ifnet** %4, align 8
  %8 = load %struct.mbuf*, %struct.mbuf** %5, align 8
  %9 = load %struct.ifnet_stat_increment_param*, %struct.ifnet_stat_increment_param** %6, align 8
  %10 = load i32, i32* @FALSE, align 4
  %11 = load i32, i32* @FALSE, align 4
  %12 = call i32 @ifnet_input_common(%struct.ifnet* %7, %struct.mbuf* %8, i32* null, %struct.ifnet_stat_increment_param* %9, i32 %10, i32 %11)
  ret i32 %12
}

declare dso_local i32 @ifnet_input_common(%struct.ifnet*, %struct.mbuf*, i32*, %struct.ifnet_stat_increment_param*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
